manifests/office/onlyoffice-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: office
  labels:
    app: office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: office
  template:
    metadata:
      labels:
        app: office
        version: v0.0.1
    spec:
      containers:
      - name: office
        image: onlyoffice/documentserver
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 1500m
            memory: 1600Mi
        ports:
        - containerPort: 80
        volumeMounts:
            - name: configuration
              mountPath: /etc/nginx/includes/http-common.conf
              readOnly: true
              subPath: http-common.conf
      volumes:
        - name: configuration
          configMap:
            defaultMode: 0666
            name: onlyoffice-config
