manifests/office/onlyoffice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: office
  namespace: office
spec:
  rules:
  - host: office-test.familie-keller.info
    http:
      paths:
      - backend:
          service:
            name: office
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - office-test.familie-keller.info
    secretName: office-test.familie-keller.info-tls
